--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,139 @@
 
+@Book{		  casartelli2023thinking,
+  editor	= {Casartelli, Daniela E. and Cruschina, Silvio and Posio,
+		  Pekka and Spronck, Stef},
+  publisher	= {De Gruyter},
+  title		= {The Grammar of Thinking. From Reported Speech to Reported
+		  Thought in the Languages of the World},
+  year		= {2023}
+}
+
+@Book{		  fery2016handbookei,
+  address	= {London},
+  editor	= {F{\'e}ry, Caroline and Ishihara, Shinichiro},
+  publisher	= {Oxford University Press},
+  title		= {The Oxford Handbook of Information Structure},
+  year		= {2016}
+}
+
+@Book{		  zimmermann2009infor,
+  editor	= {Zimmermann, Malte and F{\'e}ry, Caroline},
+  publisher	= {Oxford University PressOxford},
+  title		= {Information Structure. Theoretical, Typological, and
+		  Experimental Perspectives},
+  year		= {2009}
+}
+
+@InBook{	  krifkamusan2012,
+  address	= {Berlin, Boston},
+  author	= {Krifka, Manfred and Musan, Renate},
+  booktitle	= {The Expression of Information Structure},
+  editor	= {Krifka, Manfred and Musan, Renate},
+  pages		= {1-44},
+  publisher	= {De Gruyter Mouton},
+  title		= {Information structure: Overview and linguistic issues},
+  year		= {2012}
+}
+
+@InBook{	  krifka2007notions,
+  address	= {Postdam},
+  author	= {Krifka, Manfred},
+  booktitle	= {The Notions of Information Structure},
+  editor	= {F{\'e}ry, Caroline and Fanselow, Gisbert and Krifka,
+		  Manfred},
+  pages		= {13-55},
+  publisher	= {Universit{\"a}tsverlag Potsdam},
+  title		= {Basic Notions of Information Structure},
+  year		= {2007}
+}
+
+@Book{		  fery2007ei,
+  address	= {Postdam},
+  editor	= {F{\'e}ry, Caroline and Fanselow, Gisbert and Krifka,
+		  Manfred},
+  publisher	= {Universit{\"a}tsverlag Potsdam},
+  title		= {The Notions of Information Structure},
+  year		= {2007}
+}
+
+@Article{	  ausin2021dative,
+  author	= {Ausin, Adolfo and Fern{\'a}ndez-Rubiera, Francisco J.},
+  journal	= {Borealis -- An International Journal of Hispanic
+		  Linguistics},
+  number	= {2},
+  pages		= {265--311},
+  title		= {Decomposing Spanish dative clitics},
+  volume	= {10},
+  year		= {2021}
+}
+
+@Article{	  fabregas2016information,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {Borealis -- An International Journal of Hispanic
+		  Linguistics},
+  number	= {2},
+  pages		= {1},
+  title		= {Information structure and its syntactic manifestation in
+		  Spanish: facts and proposals},
+  volume	= {5},
+  year		= {2016}
+}
+
+@Article{	  gutierrezbravo2008foco,
+  author	= {Guti{\'e}rrez Bravo, Rodrigo},
+  journal	= {Nueva Revista de Filolog{\'i}a Hisp{\'a}nica (NRFH)},
+  number	= {2},
+  pages		= {363--401},
+  title		= {La identificaci{\'o}n de los t{\'o}picos y los focos},
+  volume	= {56},
+  year		= {2008}
+}
+
+@InBook{	  fodor1980learning,
+  address	= {Harvard},
+  author	= {Fodor, Jerry},
+  booktitle	= {Language learning: The debate between Jean Piaget and Noam
+		  Chomsky},
+  editor	= {Piattelli-Palmarini, Massimo},
+  pages		= {142-162},
+  publisher	= {Harvard University Press},
+  title		= {On the impossibility of acquiring ``more powerfu''
+		  structures},
+  year		= {1980}
+}
+
+@Article{	  keating1990phonetic,
+  author	= {Keating, Patricia A.},
+  journal	= {Journal of Phonetics},
+  number	= {3},
+  pages		= {321--334},
+  title		= {Phonetic representations in a generative grammar},
+  volume	= {18},
+  year		= {1990}
+}
+
+@Article{	  hale2007micro,
+  author	= {Hale, Mark and Kissock, Madelyn and Reiss, Charles},
+  journal	= {Lingua},
+  number	= {4},
+  pages		= {645--665},
+  title		= {Microvariation, variation, and the features of universal
+		  grammar},
+  volume	= {117},
+  year		= {2007}
+}
+
+@Article{	  irurtzun2008focus,
+  author	= {Irurtzun, Aritz},
+  journal	= {The Canadian Journal of Linguistics / La revue canadienne
+		  de linguistique},
+  number	= {2-3},
+  pages		= {327--354},
+  title		= {A Derivational Approach to Focus Structure},
+  volume	= {53},
+  year		= {2008}
+}
+
 @Article{	  irurtzun2009sobre,
   author	= {Irurtzun, Aritz},
   journal	= {Catalan Journal of Linguistics},
