--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -97,7 +97,7 @@
   editor	= {Piattelli-Palmarini, Massimo},
   pages		= {142-162},
   publisher	= {Harvard University Press},
-  title		= {On the impossibility of acquiring ``more powerfu''
+  title		= {On the impossibility of acquiring ``more powerful''
 		  structures},
   year		= {1980}
 }
