--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,111 @@
 
+@Article{	  munaro2016verbless,
+  author	= {Munaro, Nicola},
+  journal	= {Journal of Linguistics},
+  number	= {3},
+  pages		= {609--637},
+  title		= {Verbless predicative structures across Romance},
+  volume	= {52},
+  year		= {2016}
+}
+
+@InBook{	  richards2009copula,
+  address	= {London},
+  author	= {Richard, Norvin},
+  booktitle	= {Proceedings of the 16thAnnual Meeting of the Austronesian
+		  Formal Linguistics Association (AFLA 16)},
+  editor	= {Chung, C. and Finner, D. and Paul, I. and Postdam, E.},
+  pages		= {181-195},
+  title		= {The Tagalog copula},
+  year		= {2009}
+}
+
+@Article{	  choueiri2016pronominal,
+  author	= {Choueiri, Lina},
+  journal	= {Brill's Journal of Afroasiatic Languages and Linguistics},
+  number	= {1},
+  pages		= {101--135},
+  title		= {The Pronominal Copula in Arabic},
+  volume	= {8},
+  year		= {2016}
+}
+
+@Article{	  gravely2022nanop,
+  author	= {Gravely, Brian and Gupton, Timothy},
+  journal	= {Isogloss. Open Journal of Romance Linguistics},
+  number	= {1},
+  pages		= {1--31},
+  title		= {Nanoparameters in Western Iberian Romance. Null-copulas in
+		  Galician and Asturian},
+  volume	= {8},
+  year		= {2022}
+}
+
+@Book{		  henry1995belfast,
+  address	= {Oxford},
+  author	= {Henry, Alison},
+  pages		= {159},
+  publisher	= {Oxford University Press},
+  title		= {Belfast English and Standard English: Dialect Variation
+		  and Parameter Setting},
+  year		= {1995}
+}
+
+@InBook{	  biberauer2016param,
+  address	= {Amsterdam},
+  author	= {Biberauer, Theresa and Roberts, Ian},
+  booktitle	= {Linguistik Aktuell/Linguistics Today: Theoretical
+		  Approaches to Linguistic Variation. The case of Conditional
+		  Inversion},
+  editor	= {Bidese, Ermenegildo and Cognola, Federica and Moroni,
+		  Manuela Caterina},
+  pages		= {259-292},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Parameter typology from a diachronic perspective. The case
+		  of Conditional Inversion},
+  year		= {2016}
+}
+
+@Book{		  bidese2016theor,
+  address	= {Amsterdam},
+  editor	= {Bidese, Ermenegildo and Cognola, Federica and Moroni,
+		  Manuela Caterina},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Theoretical Approaches to Linguistic Variation},
+  year		= {2016}
+}
+
+@InBook{	  biberauer2017ci,
+  address	= {Amsterdam},
+  author	= {Biberauer, Theresa and Roberts, Ian},
+  booktitle	= {Word Order Change in Acquisition and Language Contact},
+  editor	= {Los, Bettelou and de Haan, pter},
+  pages		= {57-77},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Conditional inversion and types of parametric change},
+  year		= {2017}
+}
+
+@Article{	  vainnika1987or,
+  author	= {Vainnika, Anna},
+  journal	= {University of Massachusetts Occasional Papers in
+		  Linguistics},
+  number	= {2},
+  title		= {Why can or mean and or or?},
+  volume	= {13},
+  year		= {1987}
+}
+
+@Article{	  schwarz1999either,
+  author	= {Schwarz, Bernhard},
+  journal	= {Natural and Linguistic Theory},
+  number	= {2},
+  pages		= {339--370},
+  title		= {On the syntax of either \ldots or},
+  volume	= {17},
+  year		= {1999}
+}
+
 @Book{		  casartelli2023thinking,
   editor	= {Casartelli, Daniela E. and Cruschina, Silvio and Posio,
 		  Pekka and Spronck, Stef},
