--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,68 @@
 
+@Article{	  fleischer2023binding,
+  author	= {Fleisher, Nicholas},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {841--860},
+  title		= {On Referential Parallelism and Compulsory Binding},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  beslin2023participles,
+  author	= {Be{\v s}lin, Ma{\v s}a},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {729--758},
+  title		= {Revisiting Passive Participles: Category Status and
+		  Internal Structure},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  barros2023sluicing,
+  author	= {Barros, Matthew and Frank, Robert},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {649--684},
+  title		= {Attention and Locality: On Clause-Boundedness and Its
+		  Exceptions in Multiple Sluicing},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  belk2023right,
+  author	= {Belk, Zoe and Neeleman, Ad and Philip, Joy},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {685--728},
+  title		= {What Divides, and What Unites, Right-Node Raising},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  lamont2023serial,
+  author	= {Lamont, Andrew},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {797--839},
+  title		= {Serial Reduplication Is Empirically Adequate and
+		  Typologically Restrictive},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  hu2023faire,
+  author	= {Hu, Xiaoshi},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {759--796},
+  title		= {Defectivity Matters: Cliticization in French Causatives
+		  Revisited},
+  volume	= {54},
+  year		= {2023}
+}
+
 @Article{	  munaro2016verbless,
   author	= {Munaro, Nicola},
   journal	= {Journal of Linguistics},
