--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,133 @@
 
+@Book{		  burnett2023meaning,
+  author	= {Burnett, Heather},
+  publisher	= {Cambridge University Press},
+  title		= {Meaning, Identity, and Interaction. Sociolinguistic
+		  Variation and Change in Game-Theoretic Pragmatics},
+  year		= {2023}
+}
+
+@InBook{	  chung2017vos,
+  address	= {Hoboken, NJ, USA},
+  author	= {Chung, Sandra},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
+  publisher	= {Wiley},
+  title		= {{VOS} Languages: Some of Their Properties},
+  year		= {2017}
+}
+
+@InBook{	  polinsky2017erg,
+  address	= {Hoboken, NJ, USA},
+  author	= {Polinsky, Maria},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
+  publisher	= {Wiley},
+  title		= {Syntactic Ergativity},
+  year		= {2017}
+}
+
+@InBook{	  gueron2017inali,
+  address	= {Hoboken, NJ, USA},
+  author	= {Gu{\'e}ron, Jacqueline},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
+  publisher	= {Wiley},
+  title		= {Inalienable Possession, Primarily in French},
+  year		= {2017}
+}
+
+@InBook{	  mohanan2017light,
+  address	= {Hoboken, NJ, USA},
+  author	= {Mohanan, Tara},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
+  publisher	= {Wiley},
+  title		= {Grammatical and Light Verbs},
+  year		= {2017}
+}
+
+@InBook{	  citko2017double,
+  address	= {Hoboken, NJ, USAJ},
+  author	= {Citko, Barbara and Embley Emonds, Joseph and Whitney,
+		  Rosemarie},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  publisher	= {Wiley},
+  title		= {Double Object Constructions},
+  year		= {2017}
+}
+
+@InBook{	  anagnostopoulou2017clitic,
+  address	= {Hoboken, NJ, USA},
+  author	= {Anagnostopoulou, Elena},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
+  publisher	= {Wiley},
+  title		= {Clitic Doubling},
+  year		= {2017}
+}
+
+@InBook{	  emonds2017adjective,
+  address	= {Hoboken, NJ, USA},
+  author	= {Emonds, Joseph Embley},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
+  publisher	= {Wiley},
+  title		= {Adjectival and Analytic Passives},
+  year		= {2017}
+}
+
+@Article{	  spreng2010antipassive,
+  author	= {Spreng, Bettina},
+  journal	= {Language and Linguistics Compass},
+  number	= {7},
+  pages		= {556--575},
+  title		= {On the Conditions for Antipassives},
+  volume	= {4},
+  year		= {2010}
+}
+
+@Article{	  davis2009salish,
+  author	= {Davis, Henry and Matthewson, Lisa},
+  journal	= {Language and Linguistics Compass},
+  number	= {4},
+  pages		= {1097--1166},
+  title		= {Issues in Salish Syntax and Semantics},
+  volume	= {3},
+  year		= {2009}
+}
+
+@Article{	  scheffler2023wont,
+  author	= {Scheffler, Tatjana and Malamud, Sophia A.},
+  journal	= {Linguistics and Philosophy},
+  title		= {``Won't you?'' reverse-polarity question tags in American
+		  English as a window into the semantics-pragmatics
+		  interface},
+  year		= {2023}
+}
+
+@Article{	  lewerentz2023truth,
+  author	= {Lewerentz, Lukas and Viebahn, Emanuel},
+  journal	= {Linguistics and Philosophy},
+  title		= {Truth and directness in pictorial assertion},
+  year		= {2023}
+}
+
+@Article{	  agolli2023compl,
+  author	= {Agolli, Eno},
+  journal	= {Linguistics and Philosophy},
+  title		= {The complex lives of proper names},
+  year		= {2023}
+}
+
+@Article{	  pancheva2023tense,
+  author	= {Pancheva, Roumyana and Zubizarreta, Maria Luisa},
+  journal	= {Linguistics and Philosophy},
+  title		= {No tense: temporality in the grammar of Paraguayan
+		  Guarani},
+  year		= {2023}
+}
+
 @Article{	  fleischer2023binding,
   author	= {Fleisher, Nicholas},
   journal	= {Linguistic Inquiry},
@@ -4349,7 +4478,7 @@
   booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
   editor	= {Everaert, Martin and van Riemsdijk, Henk},
   pages		= {1-40},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Complementizer Agreement},
   year		= {2017}
 }
@@ -4359,7 +4488,7 @@
   author	= {Hasegawa, Nobuko},
   booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
   editor	= {Everaert, Martin and van Riemsdijk, Henk},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Honorifics},
   year		= {2017}
 }
@@ -4716,7 +4845,7 @@
   booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1-42},
-  publisher	= {John Wiley \& Sons},
+  publisher	= {Wiley},
   title		= {Tough-Movement},
   year		= {2017}
 }
@@ -5789,7 +5918,7 @@
 @Book{		  wetzels2020portuguese,
   author	= {Wetzels, W. Leo and Menuzzi, Sergio and Costa, Jo{\~a}o},
   pages		= {616},
-  publisher	= {John Wiley \& Sons},
+  publisher	= {Wiley},
   title		= {The Handbook of Portuguese Linguistics},
   year		= {2020}
 }
@@ -9163,7 +9292,7 @@
   booktitle	= {The Wiley Blackwell Companion to Syntax},
   editor	= {Evareart, Martin and van Riemsdijk, Henk},
   pages		= {1-35},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Implicit Arguments},
   year		= {2017}
 }
@@ -12345,7 +12474,7 @@
   author	= {Partee, Barbara H.},
   booktitle	= {Compositionality in Formal Semantics},
   pages		= {190-202},
-  publisher	= {John Wiley \& Sons},
+  publisher	= {Wiley},
   title		= {Ambiguous Pseudoclefts with Unambiguous Be},
   year		= {2008}
 }
@@ -15271,7 +15400,7 @@
   booktitle	= {The Wiley Blackwell Companion to Semantics},
   editor	= {Gutzmann, Daniel and Matthewson, Lisa and Meier,
 		  C{\'e}cile and Rullmann, Hotze and Zimmermann, Thomas Ede},
-  publisher	= {John Wiley \& Sons},
+  publisher	= {Wiley},
   title		= {Nonlocal Adjectival Modification},
   year		= {2020}
 }
@@ -15281,7 +15410,7 @@
   booktitle	= {The Wiley Blackwell Companion to Semantics},
   editor	= {Gutzmann, Daniel and Matthewson, Lisa and Meier,
 		  C{\'e}cile and Rullmann, Hotze and Zimmermann, Thomas Ede},
-  publisher	= {John Wiley \& Sons},
+  publisher	= {Wiley},
   title		= {Kinds of (Non)Specificity},
   year		= {2020}
 }
@@ -15291,7 +15420,7 @@
   booktitle	= {The Wiley Blackwell Companion to Semantics},
   editor	= {Gutzmann, Daniel and Matthewson, Lisa and Meier,
 		  C{\'e}cile and Rullmann, Hotze and Zimmermann, Thomas Ede},
-  publisher	= {John Wiley \& Sons},
+  publisher	= {Wiley},
   title		= {Intensional Transitive Verbs},
   year		= {2020}
 }
@@ -15301,7 +15430,7 @@
   booktitle	= {The Wiley Blackwell Companion to Semantics},
   editor	= {Gutzmann, Daniel and Matthewson, Lisa and Meier,
 		  C{\'e}cile and Rullmann, Hotze and Zimmermann, Thomas Ede},
-  publisher	= {John Wiley \& Sons},
+  publisher	= {Wiley},
   title		= {Semantic Parameters and Universals},
   year		= {2020}
 }
@@ -17004,7 +17133,7 @@
   author	= {Partee, Barbara H.},
   booktitle	= {Compositionality in {Formal} {Semantics}},
   pages		= {190--202},
-  publisher	= {John Wiley \& Sons},
+  publisher	= {Wiley},
   title		= {Ambiguous {Pseudoclefts} with {Unambiguous} {Be}},
   year		= {2008},
   doi		= {10.1002/9780470751305.ch9}
@@ -17568,7 +17697,7 @@
   address	= {Oxford, UK},
   editor	= {van Oostendorp, Marc and Ewen, Colin J. and Hume,
 		  Elizabeth and Rice, Keren},
-  publisher	= {John Wiley \& Sons},
+  publisher	= {Wiley},
   title		= {The Blackwell Companion to Phonology},
   year		= {2011}
 }
@@ -58835,7 +58964,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--14},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Bridge {Phenomena}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom011}
@@ -58848,7 +58977,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--138},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Pseudoclefts and {Other} {Specificational} {Copular}
 		  {Sentences}},
   year		= {2017},
@@ -58862,7 +58991,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--19},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {The {Accusative} {Plus} {Infinitive} {Construction} in
 		  {English}},
   year		= {2017},
@@ -58876,7 +59005,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--66},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Measure {Phrases} and {Semi}-{Lexical} {Nouns}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom058}
@@ -58889,7 +59018,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--36},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Case: {Oblique}, {Inherent}, {Semantic}, {Quirky}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom086}
@@ -58902,7 +59031,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--23},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Copular {Sentences}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom043}
@@ -58915,7 +59044,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--30},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Complementizer {Deletion}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom013}
@@ -58928,7 +59057,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--27},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Condition {C} {Violations} and {Strong} {Crossover}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom021}
@@ -58941,7 +59070,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--48},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Conditionals},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom119}
@@ -58954,7 +59083,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--58},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Comparative {Deletion} and {Comparative} {Subdeletion}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom079}
@@ -58967,7 +59096,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--46},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Free {Relatives}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom116}
@@ -58980,7 +59109,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--32},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Internally {Headed} {Relative} {Clauses}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom028}
@@ -58993,7 +59122,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--56},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Amount {Relatives}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom033}
@@ -59006,7 +59135,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--47},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {The {Person} {Case} {Constraint}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom101}
@@ -59019,7 +59148,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--68},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Case, {Primarily} in {Japanese}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom029}
@@ -59032,7 +59161,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--32},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Asymmetric {Coordination}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom070}
@@ -59045,7 +59174,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--35},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {Ellipsis in {Noun} {Phrases}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom052}
@@ -59058,7 +59187,7 @@
 		  {Edition}},
   editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
   pages		= {1--35},
-  publisher	= {John Wiley \& Sons, Inc.},
+  publisher	= {Wiley, Inc.},
   title		= {{VP}-{Ellipsis}},
   year		= {2017},
   doi		= {10.1002/9781118358733.wbsyncom049}
