--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,10 +1,13 @@
 
-@Book{		  burnett2023meaning,
-  author	= {Burnett, Heather},
-  publisher	= {Cambridge University Press},
-  title		= {Meaning, Identity, and Interaction. Sociolinguistic
-		  Variation and Change in Game-Theoretic Pragmatics},
-  year		= {2023}
+@Article{	  fabregas2010pp,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {Catalan Journal of Linguistics},
+  number	= {1},
+  pages		= {55},
+  title		= {On Spanish prepositional prefixes and the cartography of
+		  prepositions},
+  volume	= {9},
+  year		= {2010}
 }
 
 @InBook{	  chung2017vos,
