--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,105 @@
 
+@Article{	  moskal2018excluding,
+  author	= {Moskal, Beata},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Excluding exclusively the exclusive: Suppletion patterns
+		  in clusivity},
+  volume	= {3},
+  year		= {2018}
+}
+
+@InBook{	  partee2004weak,
+  author	= {Partee, Barbara H.},
+  booktitle	= {Compositionality in Formal Semantics},
+  pages		= {282-291},
+  publisher	= {Wiley},
+  title		= {Weak NPs in Have‐Sentences},
+  year		= {2004}
+}
+
+@Article{	  bonet1995clitics,
+  author	= {Bonet, Eul{\`a}lia},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {4},
+  pages		= {607--647},
+  title		= {Feature structure of Romance clitics},
+  volume	= {13},
+  year		= {1995}
+}
+
+@InBook{	  harris1995morph,
+  address	= {Washington, D.C.},
+  author	= {Harris, James},
+  booktitle	= {Evolution and Revolution in Linguistic Theory},
+  editor	= {Campos, H{\'e}ctor and Kempchinsky, Paula},
+  publisher	= {Georgetown University Press},
+  title		= {The morphology of Spanish clitics},
+  year		= {1995}
+}
+
+@Book{		  campos1995evolution,
+  address	= {Washington, D.C.},
+  editor	= {Campos, H{\'e}ctor and Kempchinsky, Paula},
+  pages		= {418},
+  publisher	= {Georgetown University Press},
+  title		= {Evolution and Revolution in Linguistic Theory},
+  year		= {1995}
+}
+
+@Article{	  fodor1975psych,
+  author	= {Fodor, JA and Garrett, MF and Walker, EC and Parkes, CH},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {515--531},
+  title		= {The Psychological Unreality of Semantic Representations},
+  volume	= {6},
+  year		= {1975}
+}
+
+@Article{	  bolinger1965atomi,
+  author	= {Bolinger, Dwight},
+  journal	= {Language},
+  number	= {4},
+  pages		= {555},
+  title		= {The Atomization of Meaning},
+  volume	= {41},
+  year		= {1965}
+}
+
+@Article{	  fodor1980againstdef,
+  author	= {Fodor, JA and Garrett, MF and Walker, EC and Parkes, CH},
+  journal	= {Cognition},
+  number	= {3},
+  pages		= {263--267},
+  title		= {Against definitions},
+  volume	= {8},
+  year		= {1980}
+}
+
+@Article{	  perfors2023trans,
+  author	= {Perfors, Andrew and Piantadosi, Steven T. and Kidd,
+		  Celeste},
+  journal	= {Nat Hum Behav},
+  number	= {10},
+  pages		= {1609--1611},
+  title		= {Trans-inclusive gender categories are cognitively
+		  natural.},
+  volume	= {7},
+  year		= {2023}
+}
+
+@Article{	  armstrong1983what,
+  author	= {Armstrong, Shannon Lee and Gleitman, Linda R. and
+		  Gleitman, Henry},
+  journal	= {Cognition},
+  number	= {3},
+  pages		= {263--308},
+  title		= {What some concepts might not be},
+  volume	= {13},
+  year		= {1983}
+}
+
 @Article{	  fabregas2010pp,
   author	= {F{\'a}bregas, Antonio},
   journal	= {Catalan Journal of Linguistics},
