--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Unpublished{	  roversi2023possessionaiwoo,
+  author	= {Roversi, Giovanni},
+  title		= {Possession And Syntactic Categories: An Argument From
+		  {\"A}iwoo},
+  year		= {2023}
+}
+
 @Article{	  moskal2018excluding,
   author	= {Moskal, Beata},
   journal	= {Glossa: a journal of general linguistics},
