--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,47 @@
 
+@InBook{	  lenzen2004leibniz,
+  address	= {Berlin},
+  author	= {Lenzen, Wolfgang},
+  booktitle	= {Handbook of the History of Logic: The Rise of Modern
+		  Logic: From Leibniz to Frege},
+  pages		= {1-83},
+  publisher	= {Elsevier},
+  title		= {Leibniz's Logic},
+  year		= {2004}
+}
+
+@InBook{	  iatridou1996have,
+  address	= {Chicago},
+  author	= {Iatridou, Sabine},
+  booktitle	= {The Proceedings of the Fourteenth West Coast Conference on
+		  Formal Linguistics},
+  editor	= {Camacho, Jos{\'e} and Choueri, Linda and Watanabe, Maki},
+  pages		= {185-203},
+  publisher	= {University of Chicago Press},
+  title		= {To Have and to Have not: on the Deconstruction Approach},
+  year		= {1996}
+}
+
+@InBook{	  partee2011montague,
+  address	= {Amsterdam; Boston},
+  author	= {Partee, Barbara H. and Hendrick, Herman L. W.},
+  booktitle	= {Handbook of logic and language},
+  editor	= {van Benthem, Johan and Meulen, Alice G. B. ter},
+  publisher	= {Elsevier},
+  title		= {Montague Grammar},
+  year		= {2011}
+}
+
+@Article{	  levinson2011possession,
+  author	= {Levinson, Lisa},
+  journal	= {Syntax},
+  number	= {4},
+  pages		= {355--393},
+  title		= {Possessive within Germanic: have and the Role of P},
+  volume	= {14},
+  year		= {2011}
+}
+
 @Unpublished{	  roversi2023possessionaiwoo,
   author	= {Roversi, Giovanni},
   title		= {Possession And Syntactic Categories: An Argument From
