--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Article{	  guajardo2022variable,
+  author	= {Guajardo, Gustavo},
+  journal	= {Frontiers in Psychology},
+  title		= {A Probabilistic and Syntactic Account of Variable Clitic
+		  Agreement in Spanish Double Object Constructions},
+  volume	= {13},
+  year		= {2022}
+}
+
+@PhDThesis{	  martin2012object,
+  address	= {New York},
+  author	= {Mart{\'i}n, Francisco Jes{\'u}s},
+  school	= {University of New York},
+  title		= {Deconstructing Catalan Objects},
+  year		= {2012}
+}
+
 @InBook{	  lenzen2004leibniz,
   address	= {Berlin},
   author	= {Lenzen, Wolfgang},
