--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,31 @@
 
+@Article{	  fernyhough2023inner,
+  author	= {Fernyhough, Charles and Borghi, Anna M.},
+  journal	= {Trends Cogn Sci},
+  title		= {Inner speech as language process and cognitive tool.},
+  year		= {2023}
+}
+
+@Article{	  kazanina2023neura,
+  author	= {Kazanina, Nina and Poeppel, David},
+  journal	= {Trends Cogn Sci},
+  number	= {11},
+  pages		= {996--1007},
+  title		= {The neural ingredients for a language of thought are
+		  available.},
+  volume	= {27},
+  year		= {2023}
+}
+
+@Book{		  posio2023discourse,
+  address	= {Berlin},
+  editor	= {Posio, Pekka and Herbeck, Peter},
+  publisher	= {Language Science Press},
+  title		= {Referring to discourse participants in Ibero Romance
+		  languages},
+  year		= {2023}
+}
+
 @Article{	  guajardo2022variable,
   author	= {Guajardo, Gustavo},
   journal	= {Frontiers in Psychology},
