--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,29 @@
 
+@Article{	  djarv2023knowing,
+  author	= {Dj{\"a}rv, Kajsa},
+  journal	= {Journal of Semantics},
+  title		= {Knowing and Believing Things: What DP-Complementation Can
+		  Tell us about the Meaning and Composition of (Factive)
+		  Attitudes},
+  year		= {2023}
+}
+
+@Article{	  collins2022complexity,
+  author	= {Collins, Chris},
+  journal	= {Biolinguistics},
+  title		= {The complexity of trees, universal grammar and economy
+		  conditions},
+  volume	= {16},
+  year		= {2022}
+}
+
+@Article{	  alonso-ovalle2023spanish,
+  author	= {Alonso-Ovalle, Luis and Rouillard, Vincent},
+  journal	= {Journal of Semantics},
+  title		= {Spanish Bare Interrogatives and Number},
+  year		= {2023}
+}
+
 @Article{	  fernyhough2023inner,
   author	= {Fernyhough, Charles and Borghi, Anna M.},
   journal	= {Trends Cogn Sci},
