--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,36 @@
 
+@Article{	  gensler2002demonst,
+  author	= {Gensler, Orin},
+  journal	= {Language},
+  number	= {4},
+  pages		= {710--764},
+  title		= {Why Should a Demonstrative Turn into a Preposition? The
+		  Evolution of Welsh Predicative yn},
+  volume	= {78},
+  year		= {2002}
+}
+
+@Article{	  weschler2001resultative,
+  author	= {Wechsler, Stephen and Noh, Bokyung},
+  journal	= {Language Sciences},
+  number	= {4-5},
+  pages		= {391--423},
+  title		= {On resultative predicates and clauses: parallels between
+		  Korean and English},
+  volume	= {23},
+  year		= {2001}
+}
+
+@Article{	  heycock1993japanese,
+  author	= {Heycock, Caroline},
+  journal	= {Journal of East Asian Linguistics},
+  number	= {2},
+  pages		= {167--211},
+  title		= {Syntactic predication in Japanese},
+  volume	= {2},
+  year		= {1993}
+}
+
 @Article{	  djarv2023knowing,
   author	= {Dj{\"a}rv, Kajsa},
   journal	= {Journal of Semantics},
