--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  mizuguchi2023merge,
+  author	= {Mizuguchi, Manabu},
+  journal	= {Linguistic Research},
+  number	= {1},
+  pages		= {27--65},
+  title		= {{MERGE}, Minimal Yield, and Workspace accessibility},
+  volume	= {40},
+  year		= {2023}
+}
+
 @Article{	  gensler2002demonst,
   author	= {Gensler, Orin},
   journal	= {Language},
