--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,41 @@
 
+@InBook{	  frei1939sylvie,
+  address	= {Gen{\`e}ve},
+  author	= {Frei, Henry},
+  booktitle	= {M{\'e}langes de linguistique offerts {\`a} Ch. Bally},
+  publisher	= {Universit{\'e} de Gen{\`e}ve. Facult{\'e} des lettres},
+  title		= {Sylvie est jolie de yeux},
+  year		= {1939}
+}
+
+@Article{	  gutierrez-rexach1999fformal,
+  author	= {Gutierrez-Rexach, Javier},
+  journal	= {Journal of Semantics},
+  number	= {4},
+  pages		= {315--380},
+  title		= {The formal semantics of clitic doubling},
+  volume	= {16},
+  year		= {1999}
+}
+
+@Article{	  wonder1971complemento,
+  author	= {Wonder, John P.},
+  journal	= {Hispania},
+  number	= {1},
+  pages		= {114},
+  title		= {Complementos de Adjetivo del Genitivo},
+  volume	= {54},
+  year		= {1971}
+}
+
+@Article{	  hansen2023aesthetic,
+  author	= {Hansen, Nat and Adams, Zed},
+  journal	= {Mind},
+  title		= {The Hope of Agreement: Against Vibing Accounts of
+		  Aesthetic Judgment},
+  year		= {2023}
+}
+
 @Article{	  mizuguchi2023merge,
   author	= {Mizuguchi, Manabu},
   journal	= {Linguistic Research},
