--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,48 @@
 
+@Book{		  maienborn2019semantnp,
+  editor	= {Maienborn, Claudia and von Heusinger, Klaus and Portner,
+		  Paul},
+  pages		= {628},
+  publisher	= {Walter de Gruyter GmbH and Co KG},
+  title		= {Semantics - Noun Phrases and Verb Phrases},
+  year		= {2019}
+}
+
+@Book{		  maienborn2019theor,
+  editor	= {Maienborn, Claudia and von Heusinger, Klaus and Portner,
+		  Paul},
+  pages		= {443},
+  publisher	= {Walter de Gruyter},
+  title		= {Semantics - Theories},
+  year		= {2019}
+}
+
+@Book{		  maienborn2019semanticinter,
+  editor	= {Maienborn, Claudia and von Heusinger, Klaus and Portner,
+		  Paul},
+  pages		= {632},
+  publisher	= {Walter de Gruyter GmbH and Co KG},
+  title		= {Semantics - Interfaces},
+  year		= {2019}
+}
+
+@Book{		  maienborn2019semanadject,
+  editor	= {Maienborn, Claudia and von Heusinger, Klaus and Portner,
+		  Paul},
+  pages		= {577},
+  publisher	= {Walter de Gruyter GmbH Co KG},
+  title		= {Semantics - Lexical Structures and Adjectives},
+  year		= {2019}
+}
+
+@Book{		  chomsky2002syntactic,
+  author	= {Chomsky, Noam},
+  pages		= {137},
+  publisher	= {Walter de Gruyter},
+  title		= {Syntactic Structures},
+  year		= {2002}
+}
+
 @InBook{	  frei1939sylvie,
   address	= {Gen{\`e}ve},
   author	= {Frei, Henry},
