--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,78 @@
 
+@Article{	  assmann2023focus,
+  author	= {Assmann, Muriel and B{\"u}ring, Daniel and Jordanoska,
+		  Izabela and Pr{\"u}ller, Max},
+  journal	= {Natural Language and; Linguistic Theory},
+  number	= {4},
+  pages		= {1349--1396},
+  title		= {Towards a theory of morphosyntactic focus marking},
+  volume	= {41},
+  year		= {2023}
+}
+
+@Article{	  orth2023np,
+  author	= {Orth, Wesley and Yoshida, Masaya},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {4},
+  pages		= {1509--1527},
+  title		= {There is something missing in NP and moving in DP},
+  volume	= {41},
+  year		= {2023}
+}
+
+@Article{	  oshima2023exclusive,
+  author	= {Oshima, David Y.},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {4},
+  pages		= {1529--1561},
+  title		= {Semantic variation in exclusive quantifiers. English only,
+		  Japanese dake, dake-wa, and shika, and the cleft
+		  construction},
+  volume	= {41},
+  year		= {2023}
+}
+
+@Article{	  jarrah2023passive,
+  author	= {Jarrah, Marwan},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {4},
+  pages		= {1397--1424},
+  title		= {Passive vs. unaccusative predicates: A phase-based
+		  account},
+  volume	= {41},
+  year		= {2023}
+}
+
+@Article{	  obata2015variant,
+  author	= {Obata, Miki and Epstein, Samuel and Baptista, Marlyse},
+  journal	= {Lingua},
+  pages		= {1--16},
+  title		= {Can crosslinguistically variant grammars be formally
+		  identical? Third factor underspecification and the possible
+		  elimination of parameters of UG},
+  volume	= {156},
+  year		= {2015}
+}
+
+@Book{		  vakoch2023xenolinguistics,
+  editor	= {Vakoch, Douglas A and Punske, Jeffrey},
+  publisher	= {Routledge},
+  title		= {Xenolinguistics: Towards a Science of Extraterrestrial
+		  Language},
+  year		= {2023}
+}
+
+@Article{	  vonprince2022irrealis,
+  author	= {von Prince, Kilu and Krajinovi{\'c}, Ana and Krifka,
+		  Manfred},
+  journal	= {Language},
+  number	= {2},
+  pages		= {221--249},
+  title		= {Irrealis is real},
+  volume	= {98},
+  year		= {2022}
+}
+
 @Book{		  maienborn2019semantnp,
   editor	= {Maienborn, Claudia and von Heusinger, Klaus and Portner,
 		  Paul},
