--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,64 @@
 
+@Article{	  kupferman2000avoir,
+  author	= {Kupferman, Lucien},
+  journal	= {Langue fran{\c c}aise},
+  number	= {1},
+  pages		= {67--85},
+  title		= {Avoir et la pr{\'e}dication seconde},
+  volume	= {127},
+  year		= {2000}
+}
+
+@InBook{	  gueron1998possession,
+  address	= {Paris},
+  author	= {Gu{\'e}ron, Jacqueline},
+  booktitle	= {La grammaire de la possession},
+  editor	= {Gu{\'e}ron, Jacqueline and Zribi-Hertz, Annie},
+  pages		= {167-174},
+  publisher	= {Presses de l'Universit{\'e}, Paris X},
+  title		= {Le verbe avoir et la possession},
+  year		= {1998}
+}
+
+@InBook{	  bianchi2003finiteness,
+  address	= {Paris},
+  author	= {Bianchi, Valentina},
+  booktitle	= {Time and Point of View},
+  editor	= {Gu{\'e}ron, Jacqueline and Tasmowsky, Lilliana},
+  publisher	= {University of Paris X},
+  title		= {On Finiteness as Logophoric Anchoring},
+  year		= {2003}
+}
+
+@InBook{	  uriagereka2003evidential,
+  address	= {Paris},
+  author	= {Uriagereka, Juan},
+  booktitle	= {Time and Point of View},
+  editor	= {Gu{\'e}ron, Jacqueline and Tasmowsky, Lilliana},
+  publisher	= {University of Paris X},
+  title		= {Evidential Contexts},
+  year		= {2003}
+}
+
+@Article{	  semeijn2023according,
+  author	= {Semeijn, Merel},
+  journal	= {Linguistics and Philosophy},
+  title		= {On the difference between the In and According
+		  to'operators},
+  year		= {2023}
+}
+
+@Article{	  demonte1988posesivp,
+  author	= {Demonte, Violeta},
+  journal	= {Nueva Revista de Filolog{\'i}a Hisp{\'a}nica},
+  number	= {1},
+  pages		= {89--108},
+  title		= {El art{\'i}culo en lugar del posesivo y el control de los
+		  sintagmas nominales},
+  volume	= {36},
+  year		= {1988}
+}
+
 @Article{	  assmann2023focus,
   author	= {Assmann, Muriel and B{\"u}ring, Daniel and Jordanoska,
 		  Izabela and Pr{\"u}ller, Max},
