--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Article{	  martinez2023evaluating,
+  author	= {V{\'a}zquez Mart{\'i}nez, H{\'e}ctor Javier and Lea
+		  Heuser, Annika and Yang, Charles and Kodner, Jordan},
+  journal	= {arXiv},
+  title		= {Evaluating Neural Language Models as Cognitive Models of
+		  Language Acquisition},
+  year		= {2023}
+}
+
+@Article{	  marcolli2023syntaxsemantics,
+  author	= {Marcolli, Matilde and Berwick, Robert C. and Chomsky,
+		  Noam},
+  journal	= {arXiv},
+  title		= {Syntax-semantics interface: an algebraic model},
+  year		= {2023}
+}
+
 @Article{	  kupferman2000avoir,
   author	= {Kupferman, Lucien},
   journal	= {Langue fran{\c c}aise},
